# MiniC

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md
examples/: arith.mc  cond.mc  forloop.mc  funcs.mc
src/: ast.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
